samples/_failures_safe/1761171257_1bb2ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0c3fbad.c: In function ‘main’:
./samples/SAFE/__tmp_f0c3fbad.c:145:18: error: expected ‘;’ at end of input
  145 |     buffer_append
      |                  ^
      |                  ;
./samples/SAFE/__tmp_f0c3fbad.c:145:5: error: expected declaration or statement at end of input
  145 |     buffer_append
      |     ^~~~~~~~~~~~~
